--- a/front/package.json
+++ b/front/package.json
@@ -15,7 +15,9 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2"
   },
