--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "standard": "^17.1.2"
