--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
     "date-fns": "^4.1.0",
+    "jspdf": "^3.0.1",
     "react": "^18.3.1",
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
