--- a/front/.env
+++ b/front/.env
@@ -1,1 +1,9 @@
+# API URL
 VITE_API_URL=http://localhost:3000
+
+# Auth
+VITE_JWT_SECRET=tu_jwt_secret
+
+# Otras configuraciones
+VITE_APP_NAME=LibroDeResoluciones
+VITE_UPLOAD_MAX_SIZE=5242880 # 5MB en bytes
