--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
+    "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "jspdf": "^3.0.1",
     "react": "^18.3.1",
