--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,2 +1,33 @@
+# Dependencies
 node_modules
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# Environment
 .env
+.env.local
+.env.*.local
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Logs
+logs
+*.log
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Uploads directory content but keep directory
+uploads/*
+!uploads/.gitkeep
