--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "build": "echo 'No build step required'"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
