Production ready: Backend optimizations and deployment configuration
- Optimized Express server with compression middleware
- Added environment validation system
- Configured dynamic CORS for multiple environments
- Added SSL support for production database
- Frontend API client with error interceptors
- Complete deployment configuration for Render
- Added health check endpoint
- Documentation and deployment checklist

--- a/front/.env.production
+++ b/front/.env.production
@@ -1,1 +1,6 @@
-VITE_API_BASE_URL=https://tu-backend-url.com
+# URL del backend en producción (actualizar después del despliegue)
+VITE_API_BASE_URL=https://libro-resoluciones-api.onrender.com
+
+# Variables adicionales de configuración
+VITE_APP_TITLE=Libro de Resoluciones
+VITE_APP_ENV=production
