--- a/server/.env.example
+++ b/server/.env.example
@@ -2,12 +2,8 @@
 JWT_SECRET_KEY=tu_clave_secreta_aqui
 PORT=3000
 
-# Base de datos MySQL
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=tu_password
-DB_NAME=libroderesolucionDB
-DB_PORT=3306
+# Base de datos SQLite (ya no se necesitan configuraciones de MySQL)
+# La base de datos se crea automáticamente como database.sqlite
 
 # Entorno
 NODE_ENV=development
