--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "type": "module",  "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
+    "seed": "node db/seed-data.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -20,7 +21,9 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
-    "mysql2": "^3.14.0"
+    "mysql2": "^3.14.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
