fix: Add root health check and Node.js 20 support for Render deployment
- Add root route (/) for Render health checks
- Enhanced health endpoints with detailed info
- Specify Node.js 20 in package.json engines
- Update healthCheckPath to root in render.yaml
- Add .nvmrc for Node version specification

--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",  "scripts": {
+  "type": "module",
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=9.0.0"
+  },
+  "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
     "seed": "node db/seed-data.js",
