fix: Resolve CORS issue for Render health checks
- Allow requests without origin in production (Render health checks)
- Add dedicated /render-health endpoint with open CORS
- Update healthCheckPath in render.yaml to use new endpoint
- Set explicit CORS headers for health check routes

--- a/server/render.yaml
+++ b/server/render.yaml
@@ -7,7 +7,7 @@ services:
     plan: free
     buildCommand: npm install
     startCommand: npm start
-    healthCheckPath: /
+    healthCheckPath: /render-health
     envVars:
       - key: NODE_ENV
         value: production
