--- a/server/render.yaml
+++ b/server/render.yaml
@@ -4,8 +4,7 @@ services:
     runtime: node
     env: node
     region: oregon
-    plan: free
-    buildCommand: npm install
+    plan: free    buildCommand: npm install
     startCommand: npm start
     healthCheckPath: /
     envVars:
