--- a/server/render.yaml
+++ b/server/render.yaml
@@ -6,7 +6,7 @@ services:
     region: oregon
     plan: free    buildCommand: npm install
     startCommand: npm start
-    healthCheckPath: /
+    healthCheckPath: /health
     envVars:
       - key: NODE_ENV
         value: production
