feat: add test data population script and sample resolutions
- Created populate-test-data.js script to add sample resolutions
- Added 5 test resolutions with associated images
- Updated package.json with populate-test command
- Database now has 8 total resolutions for testing
- Ready for frontend verification with populated data

--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "dev": "nodemon index.js",
     "start": "node index.js",
     "seed": "node db/seed-data.js",
+    "populate-test": "node populate-test-data.js",
     "create-admin": "node scripts/create-admin.js",
     "create-user": "node scripts/create-user.js",
     "create-admin-production": "node scripts/create-admin-production.js",
