--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "populate-test": "cd server && node populate-test-data.js"
   },
   "dependencies": {
+    "form-data": "^4.0.2",
     "node-fetch": "^2.6.7"
   }
 }
