--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
   "engines": {
     "node": ">=20.0.0",
     "npm": ">=9.0.0"
-  },  "scripts": {
+  },
+  "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
     "seed": "node db/seed-data.js",
@@ -37,7 +38,8 @@
   "devDependencies": {
     "nodemon": "^3.1.9",
     "standard": "^17.1.2"
-  },  "eslintConfig": {
+  },
+  "eslintConfig": {
     "extends": "standard"
   }
 }
