NUEVO DEPLOY RENDER

--- a/server/.env.example
+++ b/server/.env.example
@@ -9,4 +9,4 @@ PORT=3000
 NODE_ENV=development
 
 # URL del frontend
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://libro-de-resoluciones-v2-9izd-fe0i5ihfg.vercel.app
