--- a/server/package.json
+++ b/server/package.json
@@ -7,11 +7,12 @@
   "engines": {
     "node": ">=20.0.0",
     "npm": ">=9.0.0"
-  },
-  "scripts": {
+  },  "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "verify-admin": "node scripts/verify-admin.js"
+    "verify-admin": "node scripts/verify-admin.js",
+    "create-admin": "node scripts/create-admin.js",
+    "postinstall": "node scripts/create-admin.js"
   },
   "keywords": [],
   "author": "",
