--- a/front/.env.production
+++ b/front/.env.production
@@ -1,6 +1,10 @@
 # URL del backend en producción (actualizar después del despliegue)
-VITE_API_BASE_URL=https://libro-resoluciones-api.onrender.com
+VITE_API_BASE_URL=https://libro-resoluciones-backend.onrender.com
 
 # Variables adicionales de configuración
 VITE_APP_TITLE=Libro de Resoluciones
 VITE_APP_ENV=production
+
+# Configuraciones específicas para móviles en producción
+VITE_ENABLE_MOBILE_OPTIMIZATIONS=true
+VITE_FORCE_HTTPS=true
