--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
     "start": "node index.js",
     "verify-admin": "node scripts/verify-admin.js",
     "create-admin": "node scripts/create-admin.js",
+    "setup-postgres": "node scripts/setup-postgres.js",
+    "migrate-data": "node scripts/migrate-to-postgres.js",
     "postinstall": "node scripts/create-admin.js"
   },
   "keywords": [],
@@ -27,6 +29,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
+    "pg": "^8.16.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
