--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
   "engines": {
     "node": ">=20.0.0",
     "npm": ">=9.0.0"
-  },  "scripts": {
+  },
+  "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
     "verify-admin": "node scripts/verify-admin.js",
@@ -22,12 +23,14 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "cloudinary": "^1.41.3",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.14.0",
     "pg": "^8.16.0",
     "sqlite": "^5.1.1",
