Fix: Reparar despliegue Vercel - package-lock regenerado y vite.config simplificado

--- a/front/.env.production
+++ b/front/.env.production
@@ -1,5 +1,5 @@
-# URL del backend en producción (actualizar después del despliegue)
-VITE_API_BASE_URL=https://libro-resoluciones-api.onrender.com
+# URL del backend en producción (actualizada con la URL correcta)
+VITE_API_BASE_URL=https://libroderesoluciones-api.onrender.com
 
 # Variables adicionales de configuración
 VITE_APP_TITLE=Libro de Resoluciones
