--- a/front/vercel.json
+++ b/front/vercel.json
@@ -1,10 +1,28 @@
 {
+  "version": 2,
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
+  "installCommand": "npm install --no-audit",
+  "framework": "vite",
   "rewrites": [
     {
       "source": "/((?!api/.*)(?!static/.*)(?!.*\\.).*)",
       "destination": "/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        }
+      ]
     }
   ]
 }
