feat: Implement PostgreSQL configuration and migration, replacing SQLite
- Added CONFIGURACION_POSTGRESQL.md for PostgreSQL setup instructions.
- Updated IMPLEMENTACION_COMPLETADA.md with changes made to the frontend and backend.
- Created MIGRACION_A_POSTGRESQL.md detailing the migration process from SQLite to PostgreSQL.
- Added SOLUCION_ERROR_500.md addressing previous connection issues and providing credentials.
- Created TROUBLESHOOTING.md for resolving ERR_CONNECTION_REFUSED errors.
- Established front/.env.development for frontend environment variables.
- Implemented scripts/check-backend.js for backend health checks.
- Developed server/scripts/init-test-users.js to initialize test users in PostgreSQL.
- Created server/scripts/setup-database.js for setting up the database schema and initial data.
- Added test-login scripts for validating user login functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
-# Base de datos SQLite
+# Base de datos local (archivos SQLite antiguos si existieran)
 *.sqlite
 *.sqlite3
 *.db
 database.sqlite
+
+# Backups de PostgreSQL
+*.sql
+*.dump
+*.backup
 
 # Logs
 logs
