--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
   "engines": {
     "node": ">=20.0.0",
     "npm": ">=9.0.0"
-  },  "scripts": {
+  },
+  "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
     "create-admin": "node scripts/create-admin.js"
@@ -27,9 +28,7 @@
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.14.0",
-    "pg": "^8.16.0",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "pg": "^8.16.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
