--- a/server/package.json
+++ b/server/package.json
@@ -22,12 +22,14 @@
     "cloudinary": "^1.41.3",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.14.0",
+    "node-cron": "^4.2.1",
     "pg": "^8.16.0"
   },
   "devDependencies": {
