--- a/front/.env
+++ b/front/.env
@@ -1,2 +1,5 @@
 # URL del backend en desarrollo
+# Para acceso desde PC: usa localhost
+# Para acceso desde celular: usa tu IP local (ej: 192.168.1.235)
 VITE_API_BASE_URL=http://localhost:3000
+VITE_API_URL=http://192.168.1.235:3000
